--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
     "tslint": "^6.1.3",
     "tslint-config-common": "^1.6.2",
     "typescript": "^5.4.5",
+    "use-t": "^1.6.3",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.1.0",
