--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "benchmark": "^2.1.4",
     "config-galore": "^1.0.0",
     "editing-traces": "https://github.com/streamich/editing-traces#6494020428530a6e382378b98d1d7e31334e2d7b",
+    "fast-diff": "^1.3.0",
     "fast-json-patch": "^3.1.1",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
