feat(json-crdt-diff): 🎸 remove deleted "obj" keys

--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
           "",
           "demo",
           "json-cli",
+          "json-crdt-diff",
           "json-crdt-patch",
           "json-crdt-extensions",
           "json-crdt-peritext-ui",
