--- a/package.json
+++ b/package.json
@@ -120,6 +120,8 @@
     "json-logic-js": "^2.0.2",
     "nano-theme": "^1.4.3",
     "nice-ui": "^1.30.0",
+    "prosemirror-model": "^1.25.1",
+    "prosemirror-test-builder": "^1.1.1",
     "quill-delta": "^5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
