--- a/biome.json
+++ b/biome.json
@@ -35,7 +35,8 @@
 				"noAssignInExpressions": "off",
 				"noConfusingLabels": "off",
 				"noConfusingVoidType": "off",
-				"noConstEnum": "off"
+				"noConstEnum": "off",
+				"noSelfCompare": "off"
 			},
 			"complexity": {
 				"noStaticOnlyClass": "off",
