style: 💄 run formatter

--- a/biome.json
+++ b/biome.json
@@ -1,8 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
-	"organizeImports": {
-		"enabled": true
-	},
+	"$schema": "https://biomejs.dev/schemas/2.2.6/schema.json",
 	"formatter": {
 		"indentStyle": "space",
 		"lineWidth": 120
@@ -25,14 +22,16 @@
 				"noInferrableTypes": "off",
 				"noUselessElse": "off",
 				"noParameterAssign": "off",
-				"noCommaOperator": "off",
 				"useSingleVarDeclarator": "off",
+				"noUnusedTemplateLiteral": "off",
 				"useLiteralEnumMembers": "off"
 			},
 			"suspicious": {
 				"noExplicitAny": "off",
 				"useIsArray": "off",
 				"noAssignInExpressions": "off",
+				"useIterableCallbackReturn": "off",
+				"useAdjacentOverloadSignatures": "off",
 				"noConfusingLabels": "off",
 				"noConfusingVoidType": "off",
 				"noConstEnum": "off",
@@ -40,11 +39,16 @@
 			},
 			"complexity": {
 				"noStaticOnlyClass": "off",
-				"useOptionalChain": "off",
-				"noUselessLabel": "off"
+				"useOptionalChain": "off"
+			},
+			"security": {
+				"noGlobalEval": "off"
 			},
 			"a11y": {
 				"noSvgWithoutTitle": "off"
+			},
+			"correctness": {
+				"noUnusedFunctionParameters": "off"
 			},
 			"performance": {
 				"noDelete": "off"
