--- a/package.json
+++ b/package.json
@@ -35,10 +35,10 @@
     "esm/"
   ],
   "scripts": {
-    "format": "biome format ./src",
-    "format:fix": "biome format --write ./src",
-    "lint": "biome lint ./src",
-    "lint:fix": "biome lint --write ./src",
+    "format": "biome format ./packages/*/src",
+    "format:fix": "biome format --write ./packages/*/src",
+    "lint": "biome lint ./packages/*/src",
+    "lint:fix": "biome lint --write ./packages/*/src",
     "clean": "npx rimraf@5.0.5 lib es6 es2019 es2020 esm typedocs coverage gh-pages yarn-error.log src/**/__bench__/node_modules src/**/__bench__/yarn-error.log",
     "jest": "jest",
     "test": "jest --maxWorkers 7",
@@ -61,7 +61,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "^2.2.6",
     "@radix-ui/react-icons": "^1.3.1",
     "@types/benchmark": "^2.1.5",
     "@types/jest": "^29.5.12",
