--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "jj": "./bin/jj.js",
     "json-pack": "./bin/json-pack.js",
     "json-pack-test": "./bin/json-pack-test.js",
-    "json-unpack": "./bin/json-unpack.js",
+    "json-patch": "./bin/json-patch.js",
+    "json-patch-test": "./bin/json-patch-test.js",
     "json-pointer": "./bin/json-pointer.js",
     "json-pointer-test": "./bin/json-pointer-test.js",
-    "json-patch": "./bin/json-patch.js",
-    "json-patch-test": "./bin/json-patch-test.js"
+    "json-unpack": "./bin/json-unpack.js"
   },
   "files": [
     "LICENSE",
@@ -35,13 +35,14 @@
     "esm/"
   ],
   "scripts": {
-    "format": "biome format ./packages/*/src",
-    "format:fix": "biome format --write ./packages/*/src",
-    "lint": "biome lint ./packages/*/src",
-    "lint:fix": "biome lint --write ./packages/*/src",
-    "clean": "npx rimraf@5.0.5 lib es6 es2019 es2020 esm typedocs coverage gh-pages yarn-error.log src/**/__bench__/node_modules src/**/__bench__/yarn-error.log",
-    "jest": "jest",
-    "test": "jest --maxWorkers 7",
+    "clean": "yarn workspaces foreach -Apt run clean",
+    "build": "yarn clean && yarn workspaces foreach -Apt run build",
+    "test": "yarn workspaces foreach -Apt run test",
+    "format": "biome format ./src ./packages/*/src",
+    "format:fix": "biome format --write ./src ./packages/*/src",
+    "lint": "biome lint ./src ./packages/*/src",
+    "lint:fix": "biome lint --write ./src ./packages/*/src",
+    "typecheck": "yarn workspaces foreach -Apt run typecheck",
     "coverage": "yarn test --collectCoverage",
     "upgrade:check": "npx npm-check-updates@16.14",
     "upgrade:interactive": "npx npm-check-updates@16.14 --interactive"
@@ -59,12 +60,13 @@
       "optional": true
     }
   },
-  "dependencies": {},
   "devDependencies": {
     "@biomejs/biome": "^2.2.6",
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-icons": "^1.3.1",
     "@types/benchmark": "^2.1.5",
     "@types/jest": "^29.5.12",
+    "@types/node": "^24.8.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "benchmark": "^2.1.4",
@@ -73,13 +75,14 @@
     "collaborative-input": "^1.6.1",
     "collaborative-ui": "^1.6.0",
     "config-galore": "^1.0.0",
-    "editing-traces": "https://github.com/streamich/editing-traces#6494020428530a6e382378b98d1d7e31334e2d7b",
+    "editing-traces": "https://github.com/streamich/editing-traces#145f79871a7bf54162f55d84eb6b8381db7b65b8",
     "fast-diff": "^1.3.0",
     "fast-json-patch": "^3.1.1",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "json-crdt-traces": "https://github.com/streamich/json-crdt-traces#ec825401dc05cbb74b9e0b3c4d6527399f54d54d",
     "json-logic-js": "^2.0.2",
+    "monaco-editor": "^0.54.0",
     "nano-theme": "^1.4.3",
     "nice-ui": "^1.30.0",
     "quill-delta": "^5.1.0",
@@ -90,8 +93,6 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
-    "tslint": "^6.1.3",
-    "tslint-config-common": "^1.6.2",
     "typescript": "^5.8.3",
     "use-t": "^1.6.3",
     "webpack": "^5.95.0",
@@ -171,5 +172,6 @@
     "json-type",
     "json-type-value",
     "json-walk"
-  ]
+  ],
+  "packageManager": "yarn@4.10.3"
 }
