--- a/packages/json-joy/package.json
+++ b/packages/json-joy/package.json
@@ -23,11 +23,11 @@
     "jj": "./bin/jj.js",
     "json-pack": "./bin/json-pack.js",
     "json-pack-test": "./bin/json-pack-test.js",
-    "json-unpack": "./bin/json-unpack.js",
+    "json-patch": "./bin/json-patch.js",
+    "json-patch-test": "./bin/json-patch-test.js",
     "json-pointer": "./bin/json-pointer.js",
     "json-pointer-test": "./bin/json-pointer-test.js",
-    "json-patch": "./bin/json-patch.js",
-    "json-patch-test": "./bin/json-patch-test.js"
+    "json-unpack": "./bin/json-unpack.js"
   },
   "files": [
     "LICENSE",
@@ -99,20 +99,23 @@
     "very-small-parser": "^1.13.0"
   },
   "devDependencies": {
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-icons": "^1.3.1",
+    "@types/node": "^24.8.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "clipboard-copy": "^4.0.1",
     "collaborative-editor": "^2.8.0",
     "collaborative-input": "^1.6.1",
     "collaborative-ui": "^1.6.0",
-    "editing-traces": "https://github.com/streamich/editing-traces#6494020428530a6e382378b98d1d7e31334e2d7b",
+    "editing-traces": "https://github.com/streamich/editing-traces#71c6d732956dbe08a490f8cd9764214bd3d4c9b7",
     "fast-diff": "^1.3.0",
     "fast-json-patch": "^3.1.1",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "json-crdt-traces": "https://github.com/streamich/json-crdt-traces#ec825401dc05cbb74b9e0b3c4d6527399f54d54d",
     "json-logic-js": "^2.0.2",
+    "monaco-editor": "^0.54.0",
     "nano-theme": "^1.4.3",
     "nice-ui": "^1.30.0",
     "quill-delta": "^5.1.0",
@@ -123,8 +126,6 @@
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "tslib": "^2.8.1",
-    "tslint": "^6.1.3",
-    "tslint-config-common": "^1.6.2",
     "typescript": "^5.8.3",
     "use-t": "^1.6.3",
     "webpack": "^5.95.0",
