--- a/packages/json-joy/package.json
+++ b/packages/json-joy/package.json
@@ -40,7 +40,7 @@
     "format:fix": "biome format --write ./src",
     "lint": "biome lint ./src",
     "lint:fix": "biome lint --write ./src",
-    "clean": "npx rimraf@5.0.5 lib es6 es2019 es2020 esm typedocs coverage gh-pages yarn-error.log src/**/__bench__/node_modules src/**/__bench__/yarn-error.log",
+    "clean": "npx rimraf@5.0.5 lib es6 es2019 es2020 esm typedocs coverage gh-pages yarn-error.log",
     "build:es2020": "tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir lib",
     "build:esm": "tsc --project tsconfig.build.json --module ESNext --target ESNEXT --outDir esm",
     "build:all": "npx concurrently@8.2.2 \"yarn build:es2020\" \"yarn build:esm\"",
@@ -85,6 +85,7 @@
   },
   "dependencies": {
     "@jsonjoy.com/base64": "^1.1.2",
+    "@jsonjoy.com/buffers": "workspace:*",
     "@jsonjoy.com/json-expression": "^1.0.0",
     "@jsonjoy.com/json-pack": "^1.1.0",
     "@jsonjoy.com/json-pointer": "^1.0.1",
