chore: 🤖 update formatter and linter scripts

--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "clean": "yarn workspaces foreach -Apt run clean",
     "build": "yarn workspaces foreach -Apt run build",
     "test": "node -r ts-node/register ./node_modules/.bin/jest --maxWorkers 7",
-    "format": "biome format ./src ./packages/*/src",
-    "format:fix": "biome format --write ./src ./packages/*/src",
-    "lint": "biome lint ./src ./packages/*/src",
-    "lint:fix": "biome lint --write ./src ./packages/*/src",
+    "format": "biome format ./packages/*/src",
+    "format:fix": "biome format --write ./packages/*/src",
+    "lint": "biome lint ./packages/*/src",
+    "lint:fix": "biome lint --write ./packages/*/src",
     "typecheck": "yarn workspaces foreach -Apt run typecheck",
     "coverage": "yarn test --collectCoverage",
     "upgrade:check": "npx npm-check-updates@16.14",
