--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - run: yarn install --frozen-lockfile
-      - run: yarn test:ci --ci
+      - run: yarn test
   lint-and-co:
     runs-on: ubuntu-latest
     strategy:
