--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "json-joy-monorepo",
+  "version": "17.55.0",
   "description": "Collection of libraries for building collaborative editing apps.",
   "author": {
     "name": "streamich",
