--- a/packages/json-joy/package.json
+++ b/packages/json-joy/package.json
@@ -44,7 +44,7 @@
     "build:es2020": "tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir lib",
     "build:esm": "tsc --project tsconfig.build.json --module ESNext --target ESNEXT --outDir esm",
     "build:all": "npx concurrently@8.2.2 \"yarn build:es2020\" \"yarn build:esm\"",
-    "build": "yarn build:es2020",
+    "build": "yarn build:all",
     "jest": "jest",
     "test": "jest --maxWorkers 7",
     "test:all": "yarn lint && yarn test && yarn build:all && yarn test:cli:pointer && yarn test:cli:patch && yarn test:cli:pack && yarn demo:json-patch",
