--- a/packages/json-joy/package.json
+++ b/packages/json-joy/package.json
@@ -89,9 +89,9 @@
     "@jsonjoy.com/buffers": "workspace:*",
     "@jsonjoy.com/json-expression": "^1.0.0",
     "@jsonjoy.com/json-pack": "^1.1.0",
-    "@jsonjoy.com/json-pointer": "^1.0.1",
+    "@jsonjoy.com/json-pointer": "workspace:*",
     "@jsonjoy.com/json-type": "^1.0.0",
-    "@jsonjoy.com/util": "^1.6.0",
+    "@jsonjoy.com/util": "workspace:*",
     "arg": "^5.0.2",
     "hyperdyperid": "^1.2.0",
     "nano-css": "^5.6.2",
