--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -21,6 +21,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - run: yarn install --immutable
+      - run: yarn build
       - run: yarn typedoc
       - run: yarn test:coverage
       - run: yarn build:pages
