--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -23,6 +23,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - run: yarn install --immutable
+      - run: yarn build
       - run: yarn test
   lint-and-co:
     runs-on: ubuntu-latest
@@ -56,4 +57,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: yarn
       - run: yarn install --immutable
+      - run: yarn build
       - run: yarn typedoc
