--- a/packages/json-pack/package.json
+++ b/packages/json-pack/package.json
@@ -1,6 +1,9 @@
 {
   "name": "@jsonjoy.com/json-pack",
-  "version": "0.0.1",
+  "publishConfig": {
+    "access": "public"
+  },
+  "version": "17.59.0",
   "description": "High-performance JSON serialization library",
   "author": {
     "name": "streamich",
