--- a/packages/json-joy/package.json
+++ b/packages/json-joy/package.json
@@ -85,6 +85,7 @@
     "arg": "^5.0.2",
     "hyperdyperid": "^1.2.0",
     "nano-css": "^5.6.2",
+    "pojo-dump": "^1.4.0",
     "sonic-forest": "^1.2.1",
     "thingies": "^2.5.0",
     "tree-dump": "^1.1.0",
@@ -110,10 +111,13 @@
     "monaco-editor": "^0.54.0",
     "nano-theme": "^1.4.3",
     "nice-ui": "^1.30.0",
+    "prosemirror-model": "^1.25.1",
+    "prosemirror-test-builder": "^1.1.1",
     "quill-delta": "^5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "rxjs": "^7.8.2",
+    "slate": "^0.117.2",
     "ts-jest": "^29.4.0",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
