--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -9,53 +9,45 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  unit:
+  install-and-build-24:
+    name: Prepare yarn cache
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x, 22.x, 24.x]
     steps:
       - uses: actions/checkout@v4
       - run: corepack enable
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 24.x
           cache: yarn
-      - run: yarn install --immutable
-      - run: yarn build
+      - name: Validate cache
+        env:
+          YARN_NODE_LINKER: pnp
+          YARN_ENABLE_SCRIPTS: false
+        run: yarn --immutable && yarn build
+  unit-tests-24:
+    needs: install-and-build-24
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: corepack enable
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 24.x
+          cache: yarn
       - run: yarn test
-  lint-and-co:
+  lint-and-typecheck-24:
+    needs: install-and-build-24
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x, 22.x, 24.x]
     steps:
       - uses: actions/checkout@v4
       - run: corepack enable
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
+      - uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 24.x
           cache: yarn
-      - run: yarn install --immutable
+      - run: yarn test
       - run: yarn format
       - run: yarn lint
       - run: yarn build
       - run: yarn typecheck
-  typedoc:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x, 22.x, 24.x]
-    steps:
-      - uses: actions/checkout@v4
-      - run: corepack enable
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: yarn
-      - run: yarn install --immutable
-      - run: yarn build
       - run: yarn typedoc
