--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -22,28 +22,40 @@ jobs:
       - name: Install dependencies
         run: yarn install --immutable
       - run: yarn build
-  unit-tests-24:
+  unit-tests:
     needs: install-and-build-24
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [20.x, 22.x, 24.x]
     steps:
       - uses: actions/checkout@v4
       - run: corepack enable
-      - uses: actions/setup-node@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
         with:
-          node-version: 24.x
+          node-version: ${{ matrix.node-version }}
           cache: yarn
+      - run: yarn install --immutable
+      - run: yarn build
       - run: yarn test
-  lint-and-typecheck-24:
+  lint-and-typecheck:
     needs: install-and-build-24
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        node-version: [20.x, 22.x, 24.x]
     steps:
       - uses: actions/checkout@v4
       - run: corepack enable
-      - uses: actions/setup-node@v4
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v4
         with:
-          node-version: 24.x
+          node-version: ${{ matrix.node-version }}
           cache: yarn
-      - run: yarn test
+      - run: yarn install --immutable
       - run: yarn format
       - run: yarn lint
       - run: yarn build
