feat(json-path): 🎸 add couple of tests

--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
           "json-patch-ot",
           "json-patch",
           "json-patch-diff",
+          "json-path",
           "json-stable",
           "json-text",
           "json-walk",
