--- a/packages/json-path/package.json
+++ b/packages/json-path/package.json
@@ -66,7 +66,13 @@
       "node_modules"
     ]
   },
+  "dependencies": {
+    "@jsonjoy.com/codegen": "workspace:*"
+  },
   "peerDependencies": {
     "tslib": "2"
+  },
+  "devDependencies": {
+    "jsonpath-plus": "^10.3.0"
   }
 }
