fix: 🐛 correct build artifact output in json-joy main package

--- a/packages/json-joy/tsconfig.json
+++ b/packages/json-joy/tsconfig.json
@@ -2,5 +2,5 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
   },
-  "include": ["src", "../json-path/src"]
+  "include": ["src"]
 }
