--- a/packages/json-joy/package.json
+++ b/packages/json-joy/package.json
@@ -92,6 +92,7 @@
     "very-small-parser": "^1.14.0"
   },
   "devDependencies": {
+    "@jsonjoy.com/json-random": "workspace:*",
     "@radix-ui/react-icons": "^1.3.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
