chore(collaborative-slate): 🤖 setup collaborative-slate package

--- a/package.json
+++ b/package.json
@@ -95,6 +95,8 @@
         "maxMessageLength": 90,
         "scopes": [
           "",
+          "collaborative-slate",
+          "collaborative-prosemirror",
           "demo",
           "json-cli",
           "json-crdt-diff",
