--- a/packages/collaborative-slate/src/__demos__/plate/tsconfig.json
+++ b/packages/collaborative-slate/src/__demos__/plate/tsconfig.json
@@ -11,5 +11,5 @@
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true
   },
-  "include": ["./**/*", "../../index.ts"]
+  "include": ["./**/*", "../shared/**/*", "../../index.ts"]
 }
