test(collaborative-editor): 💍 setup Storybook

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "deploy:pages": "gh-pages -d gh-pages",
     "publish-coverage-and-typedocs": "yarn typedoc && yarn test:coverage && yarn build:pages && yarn deploy:pages",
     "upgrade:check": "npx npm-check-updates@16.14",
-    "upgrade:interactive": "npx npm-check-updates@16.14 --interactive"
+    "upgrade:interactive": "npx npm-check-updates@16.14 --interactive",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "private": true,
   "workspaces": [
@@ -47,11 +49,14 @@
     "@biomejs/biome": "^2.2.6",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-icons": "^1.3.1",
+    "@storybook/addon-webpack5-compiler-swc": "^4.0.2",
+    "@storybook/react": "^10.2.0",
+    "@storybook/react-webpack5": "^10.2.0",
     "@types/benchmark": "^2.1.5",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.8.1",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "benchmark": "^2.1.4",
     "clipboard-copy": "^4.0.1",
     "collaborative-editor": "^2.8.0",
@@ -69,10 +74,11 @@
     "nano-theme": "^1.4.3",
     "nice-ui": "^1.30.0",
     "quill-delta": "^5.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "rimraf": "^6.1.2",
     "rxjs": "^7.8.2",
+    "storybook": "^10.2.0",
     "ts-jest": "^29.4.5",
     "ts-loader": "^9.5.4",
     "ts-node": "^10.9.2",
