--- a/packages/collaborative-editor/tsconfig.build.json
+++ b/packages/collaborative-editor/tsconfig.build.json
@@ -14,6 +14,9 @@
     "src/**/__tap__/**/*.*",
     "src/**/__tape__/**/*.*",
     "*.test.ts",
-    "*.spec.ts"
+    "*.spec.ts",
+    "src/**/__stories__/**/*.*",
+    "src/**/*.stories.ts",
+    "src/**/*.stories.tsx"
   ],
 }
