--- a/packages/collaborative-editor/package.json
+++ b/packages/collaborative-editor/package.json
@@ -40,6 +40,7 @@
     "tslib": "*"
   },
   "devDependencies": {
+    "@storybook/react": "^10.2.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "react": "^19.2.3",
