feat(collaborative-input): 🎸 setup collaborative-input package

--- a/package.json
+++ b/package.json
@@ -98,9 +98,17 @@
         "maxMessageLength": 90,
         "scopes": [
           "",
-          "collaborative-str",
-          "collaborative-slate",
+          "collaborative-ace",
+          "collaborative-codemirror",
+          "collaborative-devtools",
+          "collaborative-input",
+          "collaborative-lexical",
+          "collaborative-monaco",
           "collaborative-prosemirror",
+          "collaborative-quill",
+          "collaborative-slate",
+          "collaborative-str",
+          "collaborative-ui",
           "demo",
           "json-cli",
           "json-crdt-diff",
