feat(collaborative-monaco-react): 🎸 setup Monaco React package

--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
           "collaborative-input",
           "collaborative-lexical",
           "collaborative-monaco",
+          "collaborative-monaco-react",
           "collaborative-prosemirror",
           "collaborative-quill",
           "collaborative-slate",
