feat(collaborative-ace-react): 🎸 create Ace React package

--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
         "scopes": [
           "",
           "collaborative-ace",
+          "collaborative-ace-react",
           "collaborative-codemirror",
           "collaborative-devtools",
           "collaborative-input",
