--- a/packages/json-joy/package.json
+++ b/packages/json-joy/package.json
@@ -30,10 +30,10 @@
     "format:fix": "biome format --write ./src",
     "lint": "biome lint ./src",
     "lint:fix": "biome lint --write ./src",
-    "clean": "rimraf lib es6 es2019 es2020 esm typedocs coverage gh-pages yarn-error.log",
-    "build:es2020": "tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir lib",
-    "build:esm": "tsc --project tsconfig.build.json --module ESNext --target ESNEXT --outDir esm",
-    "build:all": "npx concurrently@8.2.2 \"yarn build:es2020\" \"yarn build:esm\"",
+    "clean": "npx rimraf lib es6 es2019 es2020 esm typedocs coverage gh-pages yarn-error.log",
+    "build:es2020": "npx rimraf lib && tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir lib",
+    "build:esm": "npx rimraf esm && tsc --project tsconfig.build.json --module ESNext --target ESNEXT --outDir esm",
+    "build:all": "yarn build:es2020 && yarn build:esm",
     "build": "yarn build:all",
     "jest": "jest",
     "test": "jest --maxWorkers 7",
