--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@biomejs/biome": "^2.2.6",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-icons": "^1.3.1",
+    "@storybook/addon-a11y": "^10.2.0",
     "@storybook/addon-webpack5-compiler-swc": "^4.0.2",
     "@storybook/react": "^10.2.0",
     "@storybook/react-webpack5": "^10.2.0",
