--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -83,7 +83,7 @@
   ],
   "scripts": {
     "clean": "rimraf lib typedocs coverage gh-pages yarn-error.log",
-    "build": "tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir lib",
+    "build": "npx tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir lib",
     "jest": "node -r ts-node/register ./node_modules/.bin/jest",
     "test": "jest --maxWorkers 7",
     "test:ci": "yarn jest --maxWorkers 3 --no-cache",
