feat(collaborative-input-react): 🎸 setup collaborative-input-react pacakge

--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
           "collaborative-codemirror",
           "collaborative-devtools",
           "collaborative-input",
+          "collaborative-input-react",
           "collaborative-lexical",
           "collaborative-monaco",
           "collaborative-monaco-react",
