--- a/packages/collaborative-ui/package.json
+++ b/packages/collaborative-ui/package.json
@@ -39,6 +39,7 @@
     "@jsonjoy.com/click-json": "workspace:*",
     "@jsonjoy.com/collaborative-codemirror": "workspace:*",
     "@jsonjoy.com/collaborative-input": "workspace:^",
+    "@jsonjoy.com/collaborative-input-react": "workspace:^",
     "@jsonjoy.com/collaborative-monaco": "workspace:*",
     "@jsonjoy.com/collaborative-quill": "workspace:*",
     "@jsonjoy.com/collaborative-str": "workspace:*",
